<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_list_juries"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_list_project_cardview_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/selector_background_white_to_soft_grey"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_juries_text_padding"
                    android:text="@string/card_view_list_juries_num"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_juries_title_text_size"
                    />
                <TextView
                    android:id="@+id/tv_jury_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_juries_text_padding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_juries_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_juries_text_padding"
                    android:text="@string/card_view_list_juries_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_juries_title_text_size" />
                <TextView
                    android:id="@+id/tv_juries_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_juries_text_padding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_juries_title_text_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_list_juries_text_padding"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_list_juries_title_text_size"
                android:text="@string/card_view_list_juries_alert"
                />

            <Switch
                android:id="@+id/swAlert"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:id="@+id/tv_alert_date"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_list_juries_text_padding"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_list_juries_title_text_size"/>

            <TextView
                android:id="@+id/tv_alert_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/activity_list_juries_text_padding"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_list_juries_title_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_list_juries_text_padding"
                android:text="@string/card_view_list_juries_members"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_list_juries_title_text_size" />

            <TextView
                android:id="@+id/tv_jury_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_list_juries_text_padding"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_list_juries_title_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_list_juries_text_padding"
            android:text="@string/card_view_list_juries_projects"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_list_juries_title_text_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_projects_jury"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>