<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_list_project"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_list_project_cardview_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/selector_background_white_to_soft_grey"
        >
        <TextView
            android:id="@+id/tv_project_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_list_project_text_padding"
            android:maxLines="2"
            android:minLines="2"
            android:text="Monty Python And The Quest For The Holy Grail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_list_project_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_gravity="start"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_list_project_text_padding"
                            android:text="@string/card_view_list_project_id"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/activity_list_project_content_text_size" />

                        <TextView
                            android:id="@+id/tv_project_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_list_project_text_padding"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/activity_list_project_content_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_list_project_text_padding"
                            android:text="@string/card_view_list_project_poster"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/activity_list_project_content_text_size" />

                        <TextView
                            android:id="@+id/tv_project_poster_enable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_list_project_text_padding"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/activity_list_project_content_text_size" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_project_text_padding"
                    android:text="@string/card_view_list_project_supervisor"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_project_content_text_size" />

                <TextView
                    android:id="@+id/tv_project_supervisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_list_project_text_padding"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_list_project_content_text_size" />


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_film_resume_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_list_project_text_padding"
            android:text="@string/card_view_list_project_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_list_project_content_text_size" />
        <TextView
            android:id="@+id/tv_project_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_list_project_text_padding"
            android:paddingBottom="@dimen/activity_list_project_text_padding"
            android:paddingLeft="@dimen/activity_list_project_description_padding"
            android:paddingRight="@dimen/activity_list_project_description_padding"
            android:text="Monty Python and the Holy Grail',1975,33,'Comédie','Le roi Arthur et les Chevaliers de la Table Ronde se lancent à la conquête du Graal, chevauchant de fantômatiques montures dans un bruitage de noix de coco cognées. La petite troupe va devoir passer mille épreuves, dont un chevalier à trois têtes, des jouvencelles en chaleur, voire même un terrible lapin tueur."
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_list_project_content_text_size" />
    </LinearLayout>

</android.support.v7.widget.CardView>